style.css
/* @import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@600&family=Prompt:wght@500&family=Russo+One&display=swap'); */

*{
    box-sizing: border-box;
    padding: 0;
    margin: 0;
    font-family:'poppins', sans-serif;
}

.container{
    width: 100%;
    min-height: 100vh;
    background : linear-gradient(135deg, #153677, #4e085f);
    padding: 10px;
}

.todo-app{
width: 100%;
max-width: 540px;
background: #fff;
margin: 100px auto 20px;
padding: 40px 30px 70px;
border-radius: 10px;
}

.todo-app h2{
    color: #002765;
    display: flex;
    align-items: center;
    margin-bottom: 20px;

}

.todo-app h2 img{
    width: 30px;
    margin-left: 10px;
}

.row{
    display: flex;
    
    justify-content: space-between;
    background:#edeef0;
    border-radius: 30px;
    padding-left: 20px;
    margin-bottom: 25px;
    width: 100%;
    align-items: center;

}

input{
    flex: 1;
    border: none;
    outline: none;
    background: transparent;
    padding: 10px;
    font-weight: 14px;
    flex-shrink: 0;
}

button{
    border: none;
    outline: none;
    padding: 16px 50px;
    background: #ff5945 ;
    color: #fff;
    cursor: pointer;
    font-size: 16px;
    border-radius: 40px;
    flex-shrink: 0;
}

ul li{
    list-style: none;
    font-size: 17px;
    padding: 12px 8px 12px 50px;
    user-select: none;
    cursor: pointer;
    position: relative;
}

ul li::before{
    content: '';
    position: absolute;
    height: 28px;
    width: 28px;
    border-radius: 50%;
    background-image: url(unchecked.png);
    background-size: cover;
    background-position: center;
    top: 8px;
    left: 8px;
}

ul li.checked{
color: #555;
text-decoration: line-through;

}
ul li.checked::before{
    background-image: url(checked.png);
}

ul li span{
    position: absolute;
    right: 0;
    top: 5px;
    width: 40px;
    height: 40px;
    font-size: 22px;
    color: #555;
    line-height: 40px;
    text-align: center;
    border-radius: 50%;
}
ul li span:hover{
    background: #edeef0;
}

